#508: Implemented a new milestones api and controller
